tests/parsing/cmc/errors/156.expected
File "tests/parsing/cmc/errors/156.cmc", line 1, character 32-33:
1 | (check-system sys :query (q (r) s))
                                    ^
Error while parsing a system query, read the symbol 's',
      but expected a closing parenthesis.
